# rt-dithered-fractal-tetrahedron

./: Cargo.toml  README.md
shaders/: fractal.frag  fractal.vert  texture.frag  texture.vert
src/: fractal.rs  main.rs
src/dithering/: color.rs  dither.rs  mod.rs  shared.rs  worker.rs
src/dithering/color/: ops.rs
src/graphics/: depth_buffer.rs  framebuffer.rs  mod.rs  texture.rs  vao.rs  vbo.rs
src/graphics/shader/: fragment.rs  geometry.rs  mod.rs  program.rs  vertex.rs
